# Jullia-LP-staking

./: .gitignore  Makefile  build_release.sh
.github/workflows/: tests.yml
artifacts/: checksums.txt  lido_cosmos_hub.wasm  lido_cosmos_rewards_dispatcher.wasm  lido_cosmos_token_statom.wasm  lido_cosmos_validators_registry.wasm
contracts/lido_cosmos_hub/: Cargo.toml  README.md
contracts/lido_cosmos_hub/schema/: all_history_response.json  config.json  current_batch_response.json  execute_msg.json  instantiate_msg.json  parameters.json  state.json  state_response.json
contracts/lido_cosmos_hub/src/: bond.rs  config.rs  contract.rs  lib.rs  state.rs  unbond.rs
contracts/lido_cosmos_hub/src/testing/: mock_querier.rs  tests.rs
contracts/lido_cosmos_rewards_dispatcher/: Cargo.toml  README.md
contracts/lido_cosmos_rewards_dispatcher/examples/: schema.rs
contracts/lido_cosmos_rewards_dispatcher/schema/: execute_msg.json  instantiate_msg.json
contracts/lido_cosmos_rewards_dispatcher/src/: contract.rs  msg.rs  state.rs
contracts/lido_cosmos_rewards_dispatcher/src/testing/: mock_querier.rs  tests.rs
contracts/lido_cosmos_token_statom/: Cargo.toml
contracts/lido_cosmos_token_statom/examples/: schema.rs
contracts/lido_cosmos_token_statom/src/: contract.rs  handler.rs  lib.rs  msg.rs  state.rs
contracts/lido_cosmos_validators_registry/: Cargo.toml  Developing.md  Importing.md  Publishing.md
contracts/lido_cosmos_validators_registry/examples/: schema.rs
contracts/lido_cosmos_validators_registry/src/: common.rs  contract.rs  registry.rs
contracts/lido_cosmos_validators_registry/src/testing/: mock_querier.rs  tests.rs
